# qr-tcp-tunnel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.musl  README.md  build-musl.sh  conanfile.txt  reformat_sources.sh
app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.ui  transport.cpp  transport.h
cli/: CMakeLists.txt  main.cpp
doc/: protocol.ru.md
lib/: CMakeLists.txt
